--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^1.2.0",
     "ejs": "~2.3.3",
     "express": "^4.13.3",
     "express-subdomain": "^1.0.4",
     "mongo": "^0.1.0",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "unirest": "^0.4.2"
   }
 }
