--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^1.2.0",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "ejs": "~2.3.3",
@@ -16,6 +18,7 @@
     "mongo": "^0.1.0",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
+    "nodemailer": "^1.10.0",
     "serve-favicon": "~2.3.0",
     "unirest": "^0.4.2"
   }
