--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.3",
     "express-subdomain": "^1.0.4",
     "mongo": "^0.1.0",
+    "mongodb": "~1.4",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "nodemailer": "^1.10.0",
